# clash_config_manager

./: .gitignore  1.yml  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: main.rs
