[package]
name = "clash_config_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_yaml = "0.9.21"
chrono = "0.4"
async-std = "1.12.0"
clap = { version = "4.3.3", features = ["derive"] }
openssl = { version = "0.10", features = ["vendored"] }